[gd_scene load_steps=3 format=3 uid="uid://c7cfv1e3tl2gq"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_rrfin"]
[ext_resource type="PackedScene" uid="uid://ifvnrc6yu7r4" path="res://Scenes/BG.tscn" id="2_61bfr"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rrfin")
metadata/_edit_vertical_guides_ = [593.0]
metadata/_edit_horizontal_guides_ = [289.0]

[node name="BG" parent="." instance=ExtResource("2_61bfr")]

[node name="PlayBtn" type="Button" parent="."]
visibility_layer = 2
custom_minimum_size = Vector2(100, 0)
layout_direction = 1
offset_left = 545.0
offset_top = 150.0
offset_right = 645.0
offset_bottom = 181.0
pivot_offset = Vector2(50, 20)
size_flags_horizontal = 3
text = "New"

[node name="ExitBtn" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = 545.0
offset_top = 211.0
offset_right = 645.0
offset_bottom = 242.0
pivot_offset = Vector2(50, 20)
size_flags_horizontal = 3
text = "Exit"

[node name="TestBtn" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = 545.0
offset_top = 272.0
offset_right = 645.0
offset_bottom = 303.0
pivot_offset = Vector2(50, 20)
size_flags_horizontal = 3
text = "Settings"

[node name="TestBtn3" type="Button" parent="."]
offset_left = 545.0
offset_top = 333.0
offset_right = 645.0
offset_bottom = 364.0
pivot_offset = Vector2(50, 20)
size_flags_horizontal = 3
text = "Continue"

[node name="TestBtn2" type="Button" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = 545.0
offset_top = 394.0
offset_right = 645.0
offset_bottom = 425.0
pivot_offset = Vector2(50, 20)
size_flags_horizontal = 3
text = "Credits"

[connection signal="mouse_entered" from="PlayBtn" to="." method="_on_play_btn_mouse_entered"]
[connection signal="mouse_exited" from="PlayBtn" to="." method="_on_play_btn_mouse_exited"]
[connection signal="pressed" from="PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="mouse_entered" from="ExitBtn" to="." method="_on_exit_btn_mouse_entered"]
[connection signal="mouse_exited" from="ExitBtn" to="." method="_on_exit_btn_mouse_exited"]
[connection signal="pressed" from="ExitBtn" to="." method="_on_exit_btn_pressed"]
[connection signal="mouse_entered" from="TestBtn" to="." method="_on_test_btn_mouse_entered"]
[connection signal="mouse_exited" from="TestBtn" to="." method="_on_test_btn_mouse_exited"]
[connection signal="mouse_entered" from="TestBtn3" to="." method="_on_test_btn_3_mouse_entered"]
[connection signal="mouse_exited" from="TestBtn3" to="." method="_on_test_btn_3_mouse_exited"]
[connection signal="mouse_entered" from="TestBtn2" to="." method="_on_test_btn_2_mouse_entered"]
[connection signal="mouse_exited" from="TestBtn2" to="." method="_on_test_btn_2_mouse_exited"]
